@@ -40,6 +40,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "test.hpp"
 #include "test_utils.hpp"
 #include "setup_transfer.hpp"
+#include "settings.hpp"
 
 #include "libtorrent/aux_/disable_warnings_push.hpp"
 
@@ -57,10 +58,6 @@ POSSIBILITY OF SUCH DAMAGE.
 
 using namespace libtorrent;
 using boost::tuples::ignore;
-
-int const alert_mask = alert::all_categories
-& ~alert::progress_notification
-& ~alert::stats_notification;
 
 struct test_config_t
 {
@@ -132,8 +129,7 @@ void test_ssl(int const test_idx, bool const use_utp)
 	remove_all("tmp2_ssl", ec);
 
 	int ssl_port = 1024 + rand() % 50000;
-	settings_pack sett;
-	sett.set_int(settings_pack::alert_mask, alert_mask);
+	settings_pack sett = settings();
 	sett.set_int(settings_pack::max_retry_port_bind, 100);
 	sett.set_str(settings_pack::listen_interfaces, "0.0.0.0:48075");
 	sett.set_bool(settings_pack::enable_incoming_utp, use_utp);
@@ -544,8 +540,7 @@ void test_malicious_peer()
 
 	// set up session
 	int ssl_port = 1024 + rand() % 50000;
-	settings_pack sett;
-	sett.set_int(settings_pack::alert_mask, alert_mask);
+	settings_pack sett = settings();
 	sett.set_int(settings_pack::max_retry_port_bind, 100);
 	sett.set_str(settings_pack::listen_interfaces, "0.0.0.0:48075");
 	sett.set_int(settings_pack::ssl_listen, ssl_port);
