@@ -79,7 +79,7 @@ bool prioritize_files(torrent_handle const& h, std::vector<int> const& prio)
 void test_running_torrent(boost::shared_ptr<torrent_info> info, boost::int64_t file_size)
 {
 	settings_pack pack = settings();
-	pack.set_int(settings_pack::alert_mask, alert::progress_notification | alert::storage_notification);
+	pack.set_int(settings_pack::alert_mask, alert::piece_progress_notification | alert::storage_notification);
 	pack.set_str(settings_pack::listen_interfaces, "0.0.0.0:48130");
 	pack.set_int(settings_pack::max_retry_port_bind, 10);
 	lt::session ses(pack);
