@@ -44,6 +44,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
 #include "test.hpp"
 #include "setup_transfer.hpp"
+#include "settings.hpp"
 #include "web_seed_suite.hpp"
 #include "make_torrent.hpp"
 
@@ -392,16 +393,10 @@ int EXPORT run_http_suite(int proxy, char const* protocol, bool test_url_seed
 		}
 
 		{
-			const int mask = alert::all_categories
-				& ~(alert::progress_notification
-					| alert::performance_warning
-					| alert::stats_notification);
-
-			settings_pack pack;
+			settings_pack pack = settings();
 			pack.set_int(settings_pack::max_queued_disk_bytes, 256 * 1024);
 			pack.set_str(settings_pack::listen_interfaces, "0.0.0.0:51000");
 			pack.set_int(settings_pack::max_retry_port_bind, 1000);
-			pack.set_int(settings_pack::alert_mask, mask);
 			pack.set_bool(settings_pack::enable_lsd, false);
 			pack.set_bool(settings_pack::enable_natpmp, false);
 			pack.set_bool(settings_pack::enable_upnp, false);
