@@ -1,3 +1,4 @@
+	* split progress_notification alert category into file-, piece- and block progress
 	* exposed default add_torrent_params flags to python bindings
 	* fix redundant flushes of partfile metadata
 	* add option to ignore min-interval from trackers on force-reannounce
